--- a/index.html
+++ b/index.html
@@ -27,14 +27,35 @@
             </div>
 
             </div>
-            <navbar>
+            <navbar id="solo">
                 <div class="wrap">
 
                     <!-- <input type="checkbox" id="check">
                     <label for="check"  class="checkbtn">
                         <i class="fa-solid fa-bars"></i>
                     </label> -->
-                    <div class="logo">COMMERCE <span class="oo">HUB</span></div>
+                    <div class="logo">PRATEEK <span class="oo">BHAI</span></div>
+                     <div onclick="Showsdara()" class="win">
+                        <i class="fa-solid fa-bars"></i> 
+                        </div>
+
+                        <div id="sidebar" class="sidebar">
+                            <ul class="open">
+                                <li><a href="#">HOME</a></li>
+                                <li><a href="./HTML/about.html">About</a></li>
+                                <li><a href="index.html">Listing</a></li>
+                                <li><a href="index.html">Blog</a></li>
+                                <li><a href="index.html">Contact</a></li>
+                            </ul>
+                        </div>  
+<!--                     
+                        <ul>
+                            <li><a href="index.html">HOME</a></li>
+                            <li><a href="./HTML/about.html">About</a></li>
+                            <li><a href="index.html">Listing</a></li>
+                            <li><a href="index.html">Blog</a></li>
+                            <li><a href="index.html">Contact</a></li>
+                        </ul>  -->
                     <div class="over">
                    
                         <ul>
@@ -84,6 +105,6 @@
     <div class="orey">
         <h2>hyy</h2>
     </div> -->
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
