--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <ul>
                             <li><a href="index.html">HOME</a></li>
                             <li><a href="./HTML/about.html">About</a></li>
-                            <li><a href="index.html">Listing</a></li>
+                            <li><a href="./HTML/listing.html">Listing</a></li>
                             <li><a href="index.html">Blog</a></li>
                             <li><a href="index.html">Contact</a></li>
                         </ul>
